; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_source.c_OpenMediaSubkey.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_source.c_OpenMediaSubkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OpenMediaSubkey.media = internal constant [6 x i8] c"Media\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i64)* @OpenMediaSubkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @OpenMediaSubkey(i32 %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i32, i32* %4, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @RegCreateKeyW(i32 %11, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @OpenMediaSubkey.media, i64 0, i64 0), i32* %12)
  store i32 %13, i32* %7, align 4
  br label %18

14:                                               ; preds = %3
  %15 = load i32, i32* %4, align 4
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @RegOpenKeyW(i32 %15, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @OpenMediaSubkey.media, i64 0, i64 0), i32* %16)
  store i32 %17, i32* %7, align 4
  br label %18

18:                                               ; preds = %14, %10
  %19 = load i32, i32* %7, align 4
  ret i32 %19
}

declare dso_local i32 @RegCreateKeyW(i32, i8*, i32*) #1

declare dso_local i32 @RegOpenKeyW(i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
